Changing to ejs

--- a/client/views/header.ejs
+++ b/client/views/header.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Okaies</title>
+    <title>Header</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <style type="text/css" src="/css/style.css"></style>
