--- a/client/views/frontPage.ejs
+++ b/client/views/frontPage.ejs
@@ -1,6 +1,6 @@
 <%= include header %>
     <div class="container">
-      <h1><a href="">Sign in</a></h1>
+      <h1>Sign in</h1>
     </div>
     <form id = "loginForm" align="center" action ="" method="POST">
       <div>
@@ -13,7 +13,10 @@
       <div>
         <input type="password" placeholder="Password" size="40" />
       </div>
-      <div>
+
+
+      <div class="hero-unit">
+        <h1>SIGN IN!</h1>
         <input type="submit" value="Log in" onclick="login()">
         <input type="submit" value="Sign up" onclick="signup()">
       </div>
@@ -31,6 +34,4 @@
     </script>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src=”js/bootstrap.js”></script>
-
-
 <%= include footer %>
