--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -1,16 +1,8 @@
 <%= include header %>
-
-	<form id = "loginForm" align="center" action ="" method="POST">
-      <div>
-        <input type="email" placeholder="Email Address" size="40" />
-      </div>
-      <div>
-        <input type="password" placeholder="Password" size="40" />
-      </div>
-      <div>
-        <input type="submit" value="Log in" onclick="login()">
-        <input type="submit" value="Sign up" onclick="signup()">
-      </div>
-    </form>
-
+	<body>
+		 <div class = "container">
+	      <button type="submit" class="btn btn-primary">Save Changes</button>
+	    </div>
+	    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	    <script src=”../public/js/bootstrap.js”></script>
 <%= include footer %>
