--- a/client/views/finish.ejs
+++ b/client/views/finish.ejs
@@ -1,21 +1,23 @@
-<!DOCTYPE html> 
-<html>  
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Finish</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="bootstrap-3.0.0/dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="bootstrap-3.0.0/dist/css/custom.css" rel="stylesheet" media="screen">
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <meta charset="utf-8">
+    <title>Header</title>
+    <!--<style type="text/css" src="../public/css/bootstrap.css"></style>
+    <!- HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
-      <script src="bootstrap-3.0.0/assets/js/html5shiv.js"></script>
-      <script src="bootstrap-3.0.0/assets/js/respond.min.js"></script>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+    <!-- styles -->
+    <link href="stylesheets/style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../public/css/bootstrap.css">
+
   </head>
   <body align="center">
     <div>
       Meal Maniac
-      <a href="settings.html">
+      <a href="settings">
         <img src="http://files.softicons.com/download/system-icons/web0.2ama-icons-by-chrfb/png/96x96/Settings.png" height="20" width="20" align="right" class="img-responsive" alt="Responsive image">
       </a>
     </div>
@@ -25,7 +27,7 @@
     <div> Dish </div>
     <div> Price </div>
 
-    <form id = "approval" align="center" action ="order.html" method="POST">
+    <form id = "approval" align="center" action ="order.ejs">
       <div>
         <input type="image" src = "http://upload.wikimedia.org/wikipedia/commons/1/13/Facebook_like_thumb.png" height="50" width="50" onclick="like()">
         <input type="image" src = "http://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Not_facebook_not_like_thumbs_down.png/512px-Not_facebook_not_like_thumbs_down.png" height="50" width="50" onclick="dislike()">
