--- a/client/views/header.ejs
+++ b/client/views/header.ejs
@@ -3,16 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Header</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <style type="text/css" src="/css/style.css"></style>
-    <!-- HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--<style type="text/css" src="../public/css/bootstrap.css"></style>
+    <!- HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     <!-- styles -->
     <link href="stylesheets/style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../public/css/bootstrap.css">
 
   </head>
-  <body>
