--- a/client/views/order.ejs
+++ b/client/views/order.ejs
@@ -1,37 +1,35 @@
-<!DOCTYPE html> 
-<html>  
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Order</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="bootstrap-3.0.0/dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="bootstrap-3.0.0/dist/css/custom.css" rel="stylesheet" media="screen">
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <meta charset="utf-8">
+    <title>Header</title>
+    <!--<style type="text/css" src="../public/css/bootstrap.css"></style>
+    <!- HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
-      <script src="bootstrap-3.0.0/assets/js/html5shiv.js"></script>
-      <script src="bootstrap-3.0.0/assets/js/respond.min.js"></script>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+    <!-- styles -->
+    <link href="stylesheets/style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../public/css/bootstrap.css">
+
   </head>
-  <body align="center" onLoad="displayOptions()">
+  <body align="center" onLoad="displayAddresses()">
     <div>
       Meal Maniac
-      <a href="settings.html">
+      <a href="settings.ejs">
         <img src="http://files.softicons.com/download/system-icons/web0.2ama-icons-by-chrfb/png/96x96/Settings.png" height="20" width="20" align="right" class="img-responsive" alt="Responsive image">
       </a>
     </div>
     <div>
      <select id = "addressList">
-       <option value = "1">Home</option>
-       <option value = "2">School</option>
-       <option value = "3">Drug den</option>
-       <option value = "4">Hotel</option>
      </select>
      <script>
       
-      function displayOptions(){
-        var addresses = localStorage["addresses"]
-        for (int i=0;i<addresses.length;i++){
-          document.getElementById('addressList').innerHTHML+="<option value = '"+i+"'>" +addresses[i]+"</option>";
+      function displayAddresses(){
+        var addresses = JSON.parse(localStorage.addresses);
+        for (var i=0;i<addresses.length;i++){
+          document.getElementById('addressList').innerHTML+="<option value='"+i+"'>" +addresses[i][0]+"</option>";
         }
       }
      </script>
@@ -54,12 +52,12 @@
         <input type=range min=0 max=50 value=50 step=0.01 onchange="urlChange(value)">
         <script>
           function urlChange(distance) {
-            if (distance < 5) {
-              window.location = "finish.html"
+            if (distance < 1) {
+              window.location = "finish.ejs"
             }
           }
         </script>
       </div>
     </span>
   </body>
-</html> 
+</html>
