--- a/client/views/footer.ejs
+++ b/client/views/footer.ejs
@@ -1,2 +1,4 @@
-</body>
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src=”js/bootstrap.js”></script>
+  </body>
 </html>
