--- a/client/views/header.ejs
+++ b/client/views/header.ejs
@@ -3,16 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Header</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <style type="text/css" src="/css/style.css"></style>
-    <!-- HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- styles -->
-    <link href="stylesheets/style.css" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css"></link>
+    <!--<link href="grid.css" rel="stylesheet">-->
   </head>
   <body>
