order.ejs backend integration, added finish.ejs and necessary files

--- a/client/views/confirm.ejs
+++ b/client/views/confirm.ejs
@@ -47,9 +47,7 @@
       </script>
     </div>
     <span style="white-space:nowrap">
-      <div style="float:left">
-        <input type="button" value="MANIA" onclick="">
-      </div>
+      <img style="float:left" src="https://cdn1.iconfinder.com/data/icons/socialmediabookmark/buttons/facebook_button.png" height="21" width="61" class="img-responsive" alt="Responsive image">
       <div style="float:right">
 
         <input type="button" value="GO" onclick="urlChange()">
@@ -65,7 +63,7 @@
             .done(function (data) {
               localStorage.setItem('order', JSON.stringify(data));
             });
-            window.location = "confirm";
+            window.location = "finish";
             
           }
         </script>
