--- a/client/views/finish.ejs
+++ b/client/views/finish.ejs
@@ -27,7 +27,7 @@
     <div> Dish </div>
     <div> Price </div>
 
-    <form id = "approval" align="center" action ="order.ejs">
+    <form id = "approval" align="center" action ="order">
       <div>
         <input type="image" src = "http://upload.wikimedia.org/wikipedia/commons/1/13/Facebook_like_thumb.png" height="50" width="50" onclick="like()">
         <input type="image" src = "http://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Not_facebook_not_like_thumbs_down.png/512px-Not_facebook_not_like_thumbs_down.png" height="50" width="50" onclick="dislike()">
