--- a/client/views/frontPage.ejs
+++ b/client/views/frontPage.ejs
@@ -1,4 +1,5 @@
 <%= include header %>
+<body>
   <div align="center">
     <img src="">
   </div> 
@@ -6,29 +7,33 @@
   <div class="container" align="center">
     <form class="form-sign-in">
       <div>
-        <input type="text" placeholder="First Name" size="20" />
-        <input type="text" placeholder="Last Name" size="20">
+      <input type="email" id="email" placeholder="Email Address">
       </div>
-      <div>
-      <input type="email" placeholder="Email Address">
-      </div>
-      <input type="password" placeholder="Password">
+      <input type="password" id="password" placeholder="Password">
     </form>
     <div align="center">
-      <a href="#" class="btn btn-large btn-danger">Log in</a>
-      <a href="#" class="btn btn-large btn-danger">Sign up</a>
+      <a href="#" class="btn btn-large btn-danger" onclick="login()">Log in</a>
+      <a href="#" class="btn btn-large btn-danger" onclick="signup()">Sign up</a>
     </div>
   </div>
-
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+</script>
     <script>
+      var base_url = "http://localhost:5000/";
       form = document.getElementById("loginForm");
       function login() {
-        form.action = "order.html";
-        form.submit;
+        var email = document.getElementById('email').value;
+        var password = document.getElementById('password').value;
+        $.ajax({
+          url:base_url + "login/" + email + "/" + password
+        })
+        .done(function (data) {
+          localStorage.setItem('user', JSON.stringify(data))
+        });
+        if(JSON.parse(localStorage.getItem('user'))['id'] !=0) window.location="order";
       }
       function signup() {
-        form.action = "signup.html";
-        form.submit;
+        //window.location="order";
       }
     </script>
     
