--- a/client/views/settings.ejs
+++ b/client/views/settings.ejs
@@ -1,10 +1,17 @@
-<%= include header %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Header</title>
+    <link rel="stylesheet" type="text/css" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css"></link>
+    <!--<link href="grid.css" rel="stylesheet">-->
+  </head>
 
-  <body onLoad="displayCards();displayAllergies();displayAddresses()">
+  <body align="center" onLoad="displayCards();displayAllergies();displayAddresses()">
   
-  <div align="center" class="container span4">
+  <!--<div align="center" class="container span4">
     
-  </div>
+  </div>-->
 
   <div align="center" class="container span6">
     <div class="page-header">
