Adding setting and backend functionality

--- a/client/views/finish.ejs
+++ b/client/views/finish.ejs
@@ -22,11 +22,14 @@
       </a>
     </div>
     <div> <b>Lucky You!</b> </div>
-    <div> Restaurant Name </div>
-    <div> Restaurant Phone </div>
-    <div> Dish </div>
-    <div> Price </div>
-
+    <div id="rname"> Restaurant Name </div>
+    <div id="rphone"> Restaurant Phone </div>
+    <div id="dish"> Dish </div>
+    <div id="price"> Price </div>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>
+      //DISPLAY OPTIONS BY MODIFYING ABOVE DIVS
+    </script>
     <form id = "approval" align="center" action ="order">
       <div>
         <input type="image" src = "http://upload.wikimedia.org/wikipedia/commons/1/13/Facebook_like_thumb.png" height="50" width="50" onclick="like()">
