--- a/client/views/order.ejs
+++ b/client/views/order.ejs
@@ -31,7 +31,7 @@
         <input type=range id='priceslider' min=5 max=50 value=25 step=1 onchange="outputUpdate(value)">
       </div>
       <h1>
-        $<output id=price>25</output>
+        $<output id=price><font size="7">25</font></output>
         <script>
 
           function outputUpdate(price) {
