--- a/client/views/settings.ejs
+++ b/client/views/settings.ejs
@@ -7,31 +7,34 @@
     <!--<link href="grid.css" rel="stylesheet">-->
   </head>
 
-  <body align="center" onLoad="displayCards();displayAllergies();displayAddresses()">
+  <body align="center" onLoad="displayAllergies();">
   
   <!--<div align="center" class="container span4">
     
   </div>-->
-
+  <style>
+    .hidden { display: none; }
+    .popup {position: absolute; top:250px; left: 0px; height:500px; width:460px; background-color:rgba(255,255,255,0.5);}
+  </style>
   <div align="center" class="container span6">
     <div class="page-header">
       <h1><img src="http://i.picresize.com/images/2013/11/09/L0awx.png"/> Settings</h1>
     </div>
     <form id="settings" method="POST">
-      <table class="table table-striped table-bordered" >
+      <table class="table table-striped table-bordered">
         <thead></thead>
         <tbody>
           <tr>
             <td align="center" class="span2">Name</td>
-            <td><input class="span4" type="text" placeholder="" ></td>
+            <td><input class="span4" type="text" placeholder="" id="name"></td>
           </tr>
           <tr>
             <td align="center" class="span2">Email</td>
-            <td><input class="span4" type="email" placeholder="" ></td>
+            <td><input class="span4" type="email" placeholder="" id="email"></td>
           </tr>
           <tr>
             <td align="center" class="span2">Telephone</td>
-            <td><input class="span4" type="tel" placeholder="Number" ></td>
+            <td><input class="span4" type="tel" placeholder="Number" id="phone"></td>
           </tr>
           <tr>
             <td align="center" class="span2">Address</td>
@@ -41,7 +44,7 @@
                 <option value="work">Work</option>
                 <option value="dorm">Dorm</option>
               </select>
-              <input type="button" value="Add" onclick="addAllergy()">
+              <input type="button" value="Add" onclick="addressPopup()">
             </td>
           </tr>
             <td align="center" class="span2">Tip</td>
@@ -56,8 +59,10 @@
           <tr>
             <td align="center" class="span2">Vegetarian</td>
             <td>  
-              YES <input type="radio" name="group1" value="Yes">
-              NO <input type="radio" name="group1" value="No" checked>
+              <form id="vegetarian" onchange="changeVegetarian()">
+                YES <input type="radio" name="group1" value="Yes">
+                NO <input type="radio" name="group1" value="No" checked>
+              </form>
             </td>
           </tr>
           <tr>
@@ -71,54 +76,88 @@
             <td align="center" class="span2">Cards</td>
             <td>
               <select id="cards">
-                <option value="5432">5432</option>
-                <option value="2943">2943</option>
-                <option value="1284">1284</option>
               </select>
-              <input type="button" value="Add" onclick="addCard()">
+              <input type="button" value="Add" onclick="cardPopup()">
             </td>
           </tr>    
           </tbody>
         </table>
         <!-- <a href="" class="btn btn-large btn-danger" onclick="goBack()">Go Back</a> -->
       </form>
+      <div id="addressPopUp" class="hidden popup" style=""> 
+        <p><font>New Address:</font></p>
+        <form onsubmit="addAddress()">
+          <p><input type="text" id="newAddress" placeholder="New Address"></p>
+          <p><input type="text" id="newNick" placeholder="Name of New Address"></p>
+          <input type="submit" style="position:absolute; left:-9999px">
+        </form>
+      </div>
+      <div id="cardPopUp" class="hidden popup" style=""> 
+        <p><font>New Card:</font></p>
+        <form onsubmit="addCard()">
+          <p><input type="text" id="newCardNumber" placeholder="New Card Number"></p>
+          <p><input type="text" id="newCardCode" placeholder="Card 3-digit code"></p>
+          <p>Expiration Date:</p>
+          <p><input type="text" id="newCardExpMonth" placeholder="MM">
+            <input type="text" id="newCardExpYear" placeholder="YYYY"></p>
+          <input type="submit" style="position:absolute; left:-9999px">
+        </form>
+      </div>
+      <input type="button" value="Done" onclick="exitSettings()">
     </div>
     <script>
       function addAllergy() {
-        localStorage.setItem('allergies', document.getElementById('allergies').value);
+        var user = JSON.parse(localStorage.getItem('user'));
+        user.restrictions=document.getElementById('allergies').value;
+        localStorage.setItem('user', JSON.stringify(user));
+      }
+      function addressPopup()
+      {
+        $(function () {
+           $('#addressPopUp').removeClass('hidden');
+        });
       }
       function addAddress() {
-        window.prompt(localStorage.addresses.length);
-        var newAddress = window.prompt("Enter address:");
-        var newNickname = window.prompt("Enter nickname:");
-        addresses = JSON.parse(localStorage.addresses);
-        window.notify(addresses[0][0]);
-        var newIndex =addresses.length;
-        addresses[newIndex]=[];
-        addresses[newIndex][0]=newAddress;
-        addresses[newIndex][1]=newNickname;
-        window.notify(addresses[0][0]);
-        localStorage.addresses=JSON.stringify(addresses);
-        window.notify(addresses[0][0]);
+        var newAddress = document.getElementById('newAddress').value;
+        var newNickname = document.getElementById('newNick').value;
+        var user = JSON.parse(localStorage.getItem('user'));
+        user.addresses.push(newAddress);
+        user.nicks.push(newNickname);
+        console.log(user.addresses);
+        localStorage.setItem('user', JSON.stringify(user));
       }
       function addCard() {
-        var newCreditCard = window.prompt("Enter new credit card number:");
-        var creditCards = JSON.parse(localStorage.creditCards);
-        var newIndex =creditCards.length;
-        creditCards[newIndex]=newCreditCard;
-        localStorage.creditCards=JSON.stringify(creditCards);
+        var user=JSON.parse(localStorage.getItem('user'));
+        var newCard = new Object();
+        newCard.number = document.getElementById('newCardNumber').value;
+        newCard.code = document.getElementById('newCardCode').value;
+        newCard.month = document.getElementById('newCardExpMonth').value;
+        newCard.year = document.getElementById('newCardExpYear').value;
+        user.cards.push(newCard);
+        localStorage.setItem('user', JSON.stringify(user));
         displayCards();
+      }
+      function cardPopup() {
+        $(function () {
+           $('#cardPopUp').removeClass('hidden');
+        });
+      }
+      function closeAddressPopup()
+      {
+        $(function () {
+           $('#addressPopUp').addClass('hidden');
+        });
       }
       function displayCards()
       {
-        var creditCards = JSON.parse(localStorage.creditCards);
+        var creditCards = JSON.parse(localStorage.getItem('user')).cards;
         for (var i=0;i<creditCards.length;i++){
-          document.getElementById('creditCardList').innerHTML+="<option value='"+i+"'>" +creditCards[i]+"</option>";
+          document.getElementById('cards').innerHTML+="<option value='"+i+"'>" +creditCards[i]+"</option>";
         }
       }
       function displayAllergies()
       {
-        if(localStorage.allergies!==null)document.getElementById('allergies').value=localStorage.allergies;
+        document.getElementById('allergies').value=JSON.parse(localStorage.getItem('user')).restrictions;
       }
       function displayAddresses()
       {
@@ -127,9 +166,15 @@
           document.getElementById('addresses').innerHTML+="<option value='"+i+"'>" +addresses[i][0]+"</option>";
         }
       }
-      function goBack()
+      function exitSettings()
       {
         window.history.back()
+      }
+      function changeVegetarian()
+      {
+        var user=localStorage.getItem("user");
+        user.vegetarian =documents.getElementById("vegetarian").value;
+        localStorage.setItem(localStorage);
       }
       </script>
     </form> 
