--- a/client/views/order.ejs
+++ b/client/views/order.ejs
@@ -1,4 +1,13 @@
-<%= include header %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Header</title>
+    <link rel="stylesheet" type="text/css" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css"></link>
+    <!--<link href="grid.css" rel="stylesheet">-->
+  </head>
+
+  
   <body align="center" class="span6">
 
     <div align="center" class="container span6">
@@ -47,9 +56,6 @@
           <input type="button" value="MANIA" onclick="">
           <input class="offset1" type="button" value="GO" onclick="urlChange()">
  -->
-          <script >
-              $('#sl1').slider();
-          </script>
           <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
           <script>
             function urlChange() {
