--- a/client/views/finish.ejs
+++ b/client/views/finish.ejs
@@ -3,39 +3,46 @@
   <head>
     <meta charset="utf-8">
     <title>Header</title>
-    <!--<style type="text/css" src="../public/css/bootstrap.css"></style>
-    <!- HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- styles -->
-    <link href="stylesheets/style.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../public/css/bootstrap.css">
-
+    <link rel="stylesheet" type="text/css" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css"></link>
+    <!--<link href="grid.css" rel="stylesheet">-->
+    
   </head>
-  <body align="center">
-    <div>
-      Meal Maniac
-      <a href="settings">
-        <img src="http://files.softicons.com/download/system-icons/web0.2ama-icons-by-chrfb/png/96x96/Settings.png" height="20" width="20" align="right" class="img-responsive" alt="Responsive image">
-      </a>
+
+  <body align="center" class="span6">
+
+    <div align="center" class="container span6">
     </div>
-    <div> <b>Lucky You!</b> </div>
-    <div id="rname"> Restaurant Name </div>
-    <div id="rphone"> Restaurant Phone </div>
-    <div id="dish"> Dish </div>
-    <div id="price"> Price </div>
+
+    <div align="center" class="container span6">
+      <div class="page-header">
+        <h1><img src="http://i.picresize.com/images/2013/11/09/L0awx.png"/> Meal Maniac <a href="settings">
+          <img src="http://files.softicons.com/download/system-icons/web0.2ama-icons-by-chrfb/png/96x96/Settings.png" height="20" width="20" align="right" class="img-responsive" alt="Responsive image">
+        </a></h1>
+      </div>
+
+      <output id="quote"> <h2> <font color="red"> You are a TRUE maniac! </font> </h2> </output>
+      <h3 id="rname"> Restaurant Name </h3>
+      <h3 id="rphone"> Restaurant Phone </h3>
+      <h3 id="dish"> Dish </h3>
+      <h3 id="price"> Price </h3>
+
+      <form id = "approval" align="center" action ="order">
+        <div>
+          <input type="image" src = "http://upload.wikimedia.org/wikipedia/commons/1/13/Facebook_like_thumb.png" height="50" width="50" onclick="like()">
+          <input type="image" src = "http://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Not_facebook_not_like_thumbs_down.png/512px-Not_facebook_not_like_thumbs_down.png" height="50" width="50" onclick="dislike()">
+        </div>
+      </form>
+    </div>    
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script >
+      function quotePicker(quote) {
+        //if directed here from "Purchase" then use a you're lame quote
+        //if directed here from "Mania" choose a you're awesome quote
+      }
+    </script>
     <script>
       //DISPLAY OPTIONS BY MODIFYING ABOVE DIVS
     </script>
-    <form id = "approval" align="center" action ="order">
-      <div>
-        <input type="image" src = "http://upload.wikimedia.org/wikipedia/commons/1/13/Facebook_like_thumb.png" height="50" width="50" onclick="like()">
-        <input type="image" src = "http://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Not_facebook_not_like_thumbs_down.png/512px-Not_facebook_not_like_thumbs_down.png" height="50" width="50" onclick="dislike()">
-      </div>
-    </form>
     <script>
       form = document.getElementById("approval");
       function like() {
