Combining front and back

--- a/client/views/frontPage.ejs
+++ b/client/views/frontPage.ejs
@@ -48,6 +48,12 @@
         user.cards=new Array();
         user.vegetarian="No";
         user.gluten="No";
+        user.tip="10";
+        user.first="";
+        user.middle="";
+        user.last="";
+        user.phone="";
+        user.email="";
         localStorage.setItem('user', JSON.stringify(user));
         window.location="settings";
       }
