--- a/client/views/order.ejs
+++ b/client/views/order.ejs
@@ -8,29 +8,36 @@
   </head>
 
   
-  <body align="center" class="span6">
-
+  <body align="center" class="span6" onload="displayAddresses()">
+<style>
+    .hidden { display: none; }
+    .popup {position: absolute; top:0px; left: 0px; height:500px; background-color:rgba(255,255,255,0.4);}
+  </style>
+  
     <div align="center" class="container span6">
     </div>
 
     <div align="center" class="container span6">
+      <div id="orderPopUp" class = "hidden popup span6"></br></br></br></br></br></br>
+    <p><a href="#" class="btn btn-large btn-warning" onclick="">Purchase</a></p>
+    <font color="black"><strong><p id="dishname"></p>
+    <p id="restaurant"></p>
+    <p id="totalprice"></p></strong></font>
+    <div align="center">
+          <a href="#" class="btn btn-large btn-danger" onclick="backToMenu()">Go Back</a>
+          <a href="#" class="btn btn-large btn-success offset1" onclick="">Try Again</a>
+    </div>
+
+  </div>
       <div class="page-header">
         <h1><img src="http://i.picresize.com/images/2013/11/09/L0awx.png"/> Meal Maniac <a href="settings">
           <img src="http://files.softicons.com/download/system-icons/web0.2ama-icons-by-chrfb/png/96x96/Settings.png" height="20" width="20" align="right" class="img-responsive" alt="Responsive image">
         </a></h1>
       </div>
-
+    <div id="mainMenu">  
       <div align="center" class="container span6">
-       <select id = "addressList">
+       <select id = "addressList" onchange="selectCurrentAddress()">
        </select>
-       <script>
-        function displayAddresses(){
-          var addresses = JSON.parse(localStorage.addresses);
-          for (var i=0;i<addresses.length;i++){
-            document.getElementById('addressList').innerHTML+="<option value='"+i+"'>" +addresses[i][0]+"</option>";
-          }
-        }
-       </script>
       </div>
       
       <div>
@@ -51,28 +58,62 @@
       <span style="white-space:nowrap">
         <div align="center">
           <a href="#" class="btn btn-large btn-danger" onclick="">MANIA</a>
-          <a href="#" class="btn btn-large btn-success offset1" onclick="urlChange()">GO</a>
-<!--    
+          <a href="#" class="btn btn-large btn-success offset1" onclick="orderPopup(); showMeal()">GO</a>
+          <script>
+          function orderPopup()
+              {
+                $(function () {
+                   $('#orderPopUp').removeClass('hidden');
+                   $('#mainMenu').addClass('hidden');
+                });
+              }
+            function backToMenu()
+              {
+                $(function () {
+                   $('#mainMenu').removeClass('hidden');
+                   $('#orderPopUp').addClass('hidden');
+                });
+              }
+          </script>
+<!--      
           <input type="button" value="MANIA" onclick="">
           <input class="offset1" type="button" value="GO" onclick="urlChange()">
  -->
           <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
           <script>
-            function urlChange() {
+            function showMeal() {
               var user = JSON.parse(localStorage.getItem('user'));
               var base_url = "http://localhost:5000/";
               var price = document.getElementById('price').value;
               $.ajax({
-                url:base_url + "meal/" + user['id'] + "/" + price +"/"+"trolol"
+                url:base_url + "meal/" + user['id'] + "/" + price +"/"+localStorage.currentAddress
               })
               .done(function (data) {
                 localStorage.setItem('order', JSON.stringify(data));
+
               });
-              window.location = "confirm";
-              
+              var order = JSON.parse(localStorage.getItem('order'));
+                
+                document.getElementById('dishname').innerHTML+=order.core.name;
+                document.getElementById('restaurant').innerHTML+=order.core.rest.name;
+                document.getElementById('totalprice').innerHTML+=order.total;
+            }
+            function displayAddresses()
+            {
+              localStorage.setItem('currentAddress', JSON.parse(localStorage.getItem('user')).nicks[0]);
+              var addresses = JSON.parse(localStorage.getItem('user')).nicks;
+              for (var i=0;i<addresses.length;i++){
+                document.getElementById('addressList').innerHTML+="<option value='"+i+"'>" +addresses[i]+"</option>";
+              }
+            }
+            function selectCurrentAddress()
+            {
+                var choice = document.getElementById('addressList').value;
+                localStorage.setItem('currentAddress', JSON.parse(localStorage.getItem('user')).nicks[choice]);
             }
           </script>
         </div>
       </span>
+      </div>
     </div>
 <%= include footer %>
