--- a/client/views/footer.ejs
+++ b/client/views/footer.ejs
@@ -1,4 +1,4 @@
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src=”js/bootstrap.js”></script>
+    <script src="../public/js/bootstrap.js" type="text/js"></script>
   </body>
 </html>
