Making stuff better for viewing

--- a/client/public/css/bootstrap.css
+++ b/client/public/css/bootstrap.css
@@ -1999,18 +1999,20 @@ legend + .control-group {
 }
 
 table {
+  margin-left: auto;
+  margin-right: auto;
   max-width: 100%;
   background-color: transparent;
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-.table {
+/*.table {
   width: 100%;
   margin-bottom: 20px;
 }
-
-.table th,
+*/
+/*.table th,
 .table td {
   padding: 8px;
   line-height: 20px;
@@ -2018,7 +2020,7 @@ table {
   vertical-align: top;
   border-top: 1px solid #dddddd;
 }
-
+*/
 .table th {
   font-weight: bold;
 }
