--- a/client/views/settings.ejs
+++ b/client/views/settings.ejs
@@ -5,39 +5,36 @@
     <title>Header</title>
     <link rel="stylesheet" type="text/css" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css"></link>
     <!--<link href="grid.css" rel="stylesheet">-->
+    <style>
+      .hidden { display: none; }
+      .popup {position: absolute; top:250px; left: 0px; height:500px; width:460px; background-color:rgba(255,255,255,0.5);}
+    </style>
   </head>
 
-  <body align="center" onLoad="displayAllergies(); displayCards()">
+  <body onLoad="displayAllergies(); displayCards()">
   
-  <!--<div align="center" class="container span4">
-    
-  </div>-->
-  <style>
-    .hidden { display: none; }
-    .popup {position: absolute; top:250px; left: 0px; height:500px; width:460px; background-color:rgba(255,255,255,0.5);}
-  </style>
-  <div align="center" class="container span6">
+  <div align="center">
     <div class="page-header">
       <h1><img src="http://i.picresize.com/images/2013/11/09/L0awx.png"/> Settings</h1>
     </div>
     <form id="settings" method="POST">
-      <table class="table table-striped table-bordered">
+      <table class="table table-striped table-bordered" align="center" style="margin: 0px auto; width:30%">
         <thead></thead>
         <tbody>
-          <tr>
-            <td align="center" class="span2">Name</td>
-            <td><input class="span4" type="text" placeholder="" id="name"></td>
+          <tr>  
+            <td align="center" >Name</td>
+            <td><input  type="text" placeholder="" id="name"></td>
           </tr>
           <tr>
-            <td align="center" class="span2">Email</td>
-            <td><input class="span4" type="email" placeholder="" id="email"></td>
+            <td align="center">Email</td>
+            <td><input type="email" placeholder="" id="email"></td>
           </tr>
           <tr>
-            <td align="center" class="span2">Telephone</td>
-            <td><input class="span4" type="tel" placeholder="Number" id="phone"></td>
+            <td align="center">Telephone</td>
+            <td><input type="tel" placeholder="Number" id="phone"></td>
           </tr>
           <tr>
-            <td align="center" class="span2">Address</td>
+            <td align="center">Address</td>
             <td>
               <select id="addresses">
                 <option value="home">Home</option>
@@ -47,7 +44,7 @@
               <input type="button" value="Add" onclick="addressPopup()">
             </td>
           </tr>
-            <td align="center" class="span2">Tip</td>
+            <td align="center" >Tip</td>
             <td>  
               <select id="tip">
                 <option value="10">10%</button>
@@ -57,7 +54,7 @@
             </td>
           </tr>
           <tr>
-            <td align="center" class="span2">Vegetarian</td>
+            <td align="center" >Vegetarian</td>
             <td>  
               <form id="vegetarian" onchange="changeVegetarian()">
                 YES <input type="radio" name="group1" value="Yes">
@@ -66,14 +63,14 @@
             </td>
           </tr>
           <tr>
-            <td class="span2">Restrictions</td>
+            <td >Restrictions</td>
             <td>
               <textarea rows="4" cols="40"  id="allergies"></textarea>
               <input type="button" value="Add" onclick="addAllergy()">
             </td>
           </tr>
           <tr>
-            <td align="center" class="span2">Cards</td>
+            <td >Cards</td>
             <td>
               <select id="cards">
               </select>
