--- a/client/views/order.ejs
+++ b/client/views/order.ejs
@@ -8,7 +8,7 @@
   </head>
 
   
-  <body align="center" class="span6" onload="displayAddresses()">
+  <body align="center" class="span6" onload="displayAddresses()" style="background-color:#A40004">
 <style>
     .hidden { display: none; }
     .popup {position: absolute; top:0px; left: 0px; height:500px; background-color:rgba(255,255,255,0.4);}
@@ -30,8 +30,8 @@
 
   </div>
       <div class="page-header">
-        <h1><img src="http://i.picresize.com/images/2013/11/09/L0awx.png"/> Meal Maniac <a href="settings">
-          <img src="http://files.softicons.com/download/system-icons/web0.2ama-icons-by-chrfb/png/96x96/Settings.png" height="20" width="20" align="right" class="img-responsive" alt="Responsive image">
+        <h1><img src="http://i.picresize.com/images/2013/11/09/L0awx.png"/> <font color="white">Choose Your Fate</font> <a href="settings">
+          <img src="http://www.clker.com/cliparts/j/V/R/4/3/s/cog-cogwheel-gear-zahnrad-md.png" height="20" width="20" align="right" class="img-responsive" alt="Responsive image">
         </a></h1>
       </div>
     <div id="mainMenu">  
@@ -41,13 +41,14 @@
       </div>
       
       <div>
-        Maximum Willing to Pay
+        <font color="white">Maximum Willing to Pay</font>
       </div>
       <div>
         <input type=range id='priceslider' min=5 max=50 value=25 step=1 onchange="outputUpdate(value)">
       </div>
       <h1>
-        $<output id=price><font size="7">25</font></output>
+        <font color="white">$</font>
+        <output id=price><font size="7" color="white">25</font></output>
         <script>
 
           function outputUpdate(price) {
@@ -57,7 +58,7 @@
       </h1>
       <span style="white-space:nowrap">
         <div align="center">
-          <a href="#" class="btn btn-large btn-danger" onclick="maniaTime()">MANIA</a>
+          <a href="#" class="btn btn-large btn-info" onclick="maniaTime()"><font color="red"> MANIA </font></a>
           <a href="#" class="btn btn-large btn-success offset1" onclick="orderPopup(); lameTime(); showMeal()">GO</a>
           <script>
           function orderPopup()
@@ -92,7 +93,7 @@
             }
             function showMeal() {
               var user = JSON.parse(localStorage.getItem("user"));
-              var base_url = "http://localhost:5000/";
+              var base_url = "http://ec2-54-200-88-29.us-west-2.compute.amazonaws.com:8080/";
               var price = document.getElementById("price").value;
               $.ajax({
                 url:base_url + "meal/" + user['id'] + "/" + price +"/"+localStorage.currentAddress
