some minor changes

--- a/client/views/header.ejs
+++ b/client/views/header.ejs
@@ -4,5 +4,6 @@
     <meta charset="utf-8">
     <title>Header</title>
     <link rel="stylesheet" type="text/css" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css"></link>
+    <link rel="stylesheet" type="text/css" href="http://bootswatch.com/assets/css/bootswatch.min.css"></link>
     <!--<link href="grid.css" rel="stylesheet">-->
   </head>
