--- a/client/views/order.ejs
+++ b/client/views/order.ejs
@@ -96,7 +96,7 @@
               localStorage.setItem("lameness", 1);
             }
             function showMeal() {
-              var base_url = "http://http://mealmaniac.com:8080/";
+              var base_url = "http://mealmaniac.com:8080/";
               var price = document.getElementById("price").value;
               $.ajax({
                 url:base_url + "meal/" + 7447 + "/" + price +"/"+"Home"
